2011-01-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.7 release procedure:
 	Changes since nco-4_0_6: 
	cd ~/nco;cvs tag -d nco-4_0_7;cvs tag -d nco-4_0_7-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.7 release"
	cvs tag -c nco-4_0_7;cvs tag -c nco-4_0_7-1

	* Fix NC_MAX_BYTE typo in nco.h which affected nco_pck.c

2011-01-16  Charlie Zender  <zender@uci.edu>

	* Tidy ncatted.c, ncrename.c

	* Add helpful debugging output to nco_aed_prc()

2011-01-14  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.6 release procedure:
 	Changes since nco-4_0_5: clang, YYYYMMDD-averaging, xtr ass crd
	cd ~/nco;cvs tag -d nco-4_0_6;cvs tag -d nco-4_0_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.6 release"
	cvs tag -c nco-4_0_6;cvs tag -c nco-4_0_6-1

	* Debian rules: Build with dap-netcdf netcdf4 udunits2 by default

	* Update NCO ANNOUNCE to clarify outstanding bugs

2011-01-03  Charlie Zender  <zender@uci.edu>

	* Define and document, but do not solve, degenerate hyperslabbing
	bug reported by Jeff Daily.

	* Be excruciatingly precise about variable list merging

	* Tidy error messages in nco_dmn_utl.c and nco_var_lst.c prior to
	fixing false positive WARNING with ncbo operating on a coordinate
	and the scalar-average of the coordinate.

2010-12-31  Charlie Zender  <zender@uci.edu>

	* Fix nco_var_lst_crd_ass_add() to reset rcd inside loop.
	This fixes TODO nco1006: associated coordinates not found.
	Symptom was that associated coordinates were not added to
	extraction list if they were declared after any non-coordinate
	dimensions.

2010-12-28  Charlie Zender  <zender@uci.edu>

	* Tidy help messages

2010-12-21  Charlie Zender  <zender@uci.edu>

	* Update copyright to 2011

2010-12-06  Charlie Zender  <zender@uci.edu>

	* Change comment line 866 of nco_pck.c to not break PGI pgcc
	From "If max-min = 0 then variable is constant..."
	  to "If max-min == 0 then variable is constant..."
	pgcc is garbage. pgCC is too (cannot compile ncap2).
